; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/mips/pci/extr_ops-pnx8550.c_config_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/mips/pci/extr_ops-pnx8550.c_config_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_bus = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pci_bus*, i32, i32, i32, i32*)* @config_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @config_read(%struct.pci_bus* %0, i32 %1, i32 %2, i32 %3, i32* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.pci_bus*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  store %struct.pci_bus* %0, %struct.pci_bus** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  %16 = load i32, i32* %10, align 4
  switch i32 %16, label %33 [
    i32 1, label %17
    i32 2, label %25
  ]

17:                                               ; preds = %5
  %18 = load %struct.pci_bus*, %struct.pci_bus** %7, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @read_config_byte(%struct.pci_bus* %18, i32 %19, i32 %20, i32* %12)
  store i32 %21, i32* %13, align 4
  %22 = load i32, i32* %12, align 4
  %23 = load i32*, i32** %11, align 8
  store i32 %22, i32* %23, align 4
  %24 = load i32, i32* %13, align 4
  store i32 %24, i32* %6, align 4
  br label %39

25:                                               ; preds = %5
  %26 = load %struct.pci_bus*, %struct.pci_bus** %7, align 8
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @read_config_word(%struct.pci_bus* %26, i32 %27, i32 %28, i32* %14)
  store i32 %29, i32* %15, align 4
  %30 = load i32, i32* %14, align 4
  %31 = load i32*, i32** %11, align 8
  store i32 %30, i32* %31, align 4
  %32 = load i32, i32* %15, align 4
  store i32 %32, i32* %6, align 4
  br label %39

33:                                               ; preds = %5
  %34 = load %struct.pci_bus*, %struct.pci_bus** %7, align 8
  %35 = load i32, i32* %8, align 4
  %36 = load i32, i32* %9, align 4
  %37 = load i32*, i32** %11, align 8
  %38 = call i32 @read_config_dword(%struct.pci_bus* %34, i32 %35, i32 %36, i32* %37)
  store i32 %38, i32* %6, align 4
  br label %39

39:                                               ; preds = %33, %25, %17
  %40 = load i32, i32* %6, align 4
  ret i32 %40
}

declare dso_local i32 @read_config_byte(%struct.pci_bus*, i32, i32, i32*) #1

declare dso_local i32 @read_config_word(%struct.pci_bus*, i32, i32, i32*) #1

declare dso_local i32 @read_config_dword(%struct.pci_bus*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
